Fixed #146: Video player covers interaction buttons and even other posts

--- a/TangerineUI.css
+++ b/TangerineUI.css
@@ -3339,7 +3339,7 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 
 
 .app-body div:not(.detailed-status) > .media-gallery:has(.media-gallery__item.standalone),
-.app-body .status > *:not(.status__info, .status__content, .status__action-bar, .status__line, .status-card, .status__quote) {
+.app-body .status > *:not(.status__info, .status__content, .status__action-bar, .status__line, .status-card, .status__quote, div:has(> .video-player)) {
     max-height: 450px;
     min-height: unset;
     width: auto;
@@ -3373,6 +3373,16 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 .app-body .media-gallery__preview,
 .app-body .video-player {
     background-color: var(--color-content-secondary-bg);
+}
+.app-body .video-player {
+    outline: 1px solid rgba(0, 0, 0, 0.05);
+    outline-offset: -1px;
+}
+.app-body .video-player__controls {
+    background: rgba(0, 0, 0, .2);
+    backdrop-filter: blur(20px);
+    margin: 10px;
+    border-radius: 8px;
 }
 .app-body .media-gallery__preview {
     outline: 1px solid rgba(0, 0, 0, 0.05);
